Cherry-pick r289001. rdar://problem/88404556

[JSC] Crash on several pages after r287986
    https://bugs.webkit.org/show_bug.cgi?id=236033

    Reviewed by Tim Horton.

    I noticed that Safari crashes when opening https://linux.die.net/man/3/localtime.
    This is happening after r287986: we are calling [self release], but the [JSValue dealloc]
    cannot work if _context is nil. We should add a guard.

    * API/JSValue.mm:
    (-[JSValue dealloc]):
    * API/tests/testapi.mm:
    (testObjectiveCAPIMain):

    Canonical link: https://commits.webkit.org/246719@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289001 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.245@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@290916 268f45cc-cd09-0410-ab3c-d52691b4dbfc